# sigui_visual_tests

./: .gitmodules  pyproject.toml  readme.md
scripts/: make_plots.py
src/sigui_visual_tests/: __init__.py  analyzers.py  plotting.py
src/sigui_visual_tests/resources/: nn64.json  np2_4shank.json
